Update theme styles

--- a/public/index.html
+++ b/public/index.html
@@ -10,17 +10,16 @@
   <meta content="jraleman" name="author" />
   <!-- Fonts -->
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Raleway:200,300,300italic,regular,italic,600,600italic,700,700italic,|Montserrat:200,300,300italic,regular,italic,600,600italic,700,700italic,&amp;subset=latin' type='text/css' media='all' />
-  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/plugins/font-awesome/%PUBLIC_URL%/css/font-awesome.min.css" />
-  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/plugins/bootstrap/%PUBLIC_URL%/css/bootstrap.min.css" />
+  <link rel="stylesheet" type="text/css" href="plugins/font-awesome/css/font-awesome.min.css" />
+  <link rel="stylesheet" type="text/css" href="plugins/bootstrap/css/bootstrap.min.css" />
   <!-- CSS files -->
-  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/animate.css" />
-  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/plugins/owl.carousel/owl.carousel.css" />
-  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/plugins/cubeportfolio/cubeportfolio/%PUBLIC_URL%/css/cubeportfolio.min.css" rel="stylesheet" />
-  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/styles.css" />
-  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/search.css" />
-  <!-- Manifest/Favicon -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="stylesheet" type="text/css" href="css/animate.css" />
+  <link rel="stylesheet" type="text/css" href="plugins/owl.carousel/owl.carousel.css" />
+  <link rel="stylesheet" type="text/css" href="plugins/cubeportfolio/cubeportfolio/css/cubeportfolio.min.css" rel="stylesheet" />
+  <link rel="stylesheet" type="text/css" href="css/styles.css" />
+  <link rel="stylesheet" type="text/css" href="css/search.css" />
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="favicon.ico" />
 </head>
 <body class="page-header-fixed">
   <!-- Navbar -->
@@ -41,7 +40,7 @@
             <h3 class="logo"><strong>METRO</strong>CUBE</h3>
           </a>
         </div>
-        <!-- Menu-->
+        <!-- Menu -->
         <div class="collapse navbar-collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
             <li class="page-scroll active">
@@ -64,13 +63,10 @@
       <div class="portfolio">
         <div class="container">
           <div class="cube-portfolio">
-
-            <!-- REACT ROOT CONTAINER-->
-            <noscript>
-              You need to enable JavaScript to run this app.
-            </noscript>
-            <div id="root"></div>
-
+            <!-- Title -->
+            <div class="heading">
+              <h2><strong>App</strong>Store</h2>
+            </div>
             <!-- Filters -->
             <div id="filters-container" class="cbp-l-filters-alignCenter">
               <div data-filter="*" class="cbp-filter-item-active cbp-filter-item"> All </div>
@@ -82,6 +78,11 @@
             <!-- Grids -->
             <div class="row">
               <div class="col-md-12">
+                <!-- REACT ROOT CONTAINER-->
+                <noscript>
+                  You need to enable JavaScript to run this app.
+                </noscript>
+                <div id="root"></div>
                 <div id="grid-container" class="cbp-l-grid-agency">
                   <!-- ItemOne -->
                   <div class="cbp-item col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 category1">
@@ -367,28 +368,28 @@
       <div class="footer-copyright">
         <div class="container">
           <ul class="copyright-socials">
-            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-            <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="https://github.com/jraleman"><i class="fa fa-github"></i></a></li>
+            <li><a href="https://linkedin.com/in/jraleman"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="https://www.youtube.com/channel/UCZDWw9Pc-nfh5TBIlHA9shw"><i class="fa fa-youtube"></i></a></li>
+            <li><a href="https://instagram.com/jraleman93"><i class="fa fa-instagram"></i></a></li>
+            <li><a href="https://jraleman.com"><i class="fa fa-globe"></i></a></li>
           </ul>
-          <P>A project by the <strong>Speedy Gonzales</strong>.</P>
+          <p>Another theme by <strong><a href="https://jraleman.com/">jraleman</a></strong>.</p>
+          <p><i>*Based on <a href="https://github.com/technext/Metronic-One-Page-2">Metronic OnePage theme</a></i><p>
         </div>
       </div>
     </section>
   </div>
   <!-- Javascript files -->
-  <script src="%PUBLIC_URL%/plugins/jquery/jquery.min.js" type="text/javascript"></script>
-  <script src="%PUBLIC_URL%/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-  <script src="%PUBLIC_URL%/plugins/smooth-scroll/smooth-scroll.js" type="text/javascript"></script>
-  <script src="%PUBLIC_URL%/plugins/owl.carousel/owl.carousel.min.js" type="text/javascript"></script>
-  <script src="%PUBLIC_URL%/plugins/cubeportfolio/cubeportfolio/js/jquery.cubeportfolio.min.js" type="text/javascript"></script>
-  <script src="%PUBLIC_URL%/js/cubeportfolio.js" type="text/javascript"></script>
-  <script src="%PUBLIC_URL%/js/scripts.js" type="text/javascript"></script>
+  <script src="plugins/jquery/jquery.min.js" type="text/javascript"></script>
+  <script src="plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+  <script src="plugins/smooth-scroll/smooth-scroll.js" type="text/javascript"></script>
+  <script src="plugins/owl.carousel/owl.carousel.min.js" type="text/javascript"></script>
+  <script src="plugins/cubeportfolio/cubeportfolio/js/jquery.cubeportfolio.min.js" type="text/javascript"></script>
+  <script src="js/cubeportfolio.js" type="text/javascript"></script>
+  <script src="js/scripts.js" type="text/javascript"></script>
   <script type="text/javascript">
     Scripts.init();
   </script>
 </body>
-
 </html>
