--- a/public/index.html
+++ b/public/index.html
@@ -77,12 +77,11 @@
             </div>
             <!-- Grids -->
             <div class="row">
-              <div class="col-md-12">
-                <!-- REACT ROOT CONTAINER-->
-                <noscript>
-                  You need to enable JavaScript to run this app.
-                </noscript>
-                <div id="root"></div>
+              <!-- REACT ROOT CONTAINER-->
+              <noscript>
+                You need to enable JavaScript to run this app.
+              </noscript>
+              <div id="root" class="col-md-12">
                 <div id="grid-container" class="cbp-l-grid-agency">
                   <!-- ItemOne -->
                   <div class="cbp-item col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 category1">
