--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
   <script src="plugins/smooth-scroll/smooth-scroll.js" type="text/javascript"></script>
   <script src="plugins/owl.carousel/owl.carousel.min.js" type="text/javascript"></script>
   <script src="plugins/cubeportfolio/cubeportfolio/js/jquery.cubeportfolio.min.js" type="text/javascript"></script>
-  <script src="js/cubeportfolio.js" type="text/javascript"></script>
+  <script src="js/cubeportfolio.js" type="text/javascript" defer></script>
   <script src="js/scripts.js" type="text/javascript"></script>
   <script type="text/javascript">
     Scripts.init();
