login markup done

--- a/public/index.html
+++ b/public/index.html
@@ -52,11 +52,44 @@
             <li class="page-scroll">
               <a href="#">About</a>
             </li>
+            <li class="page-scroll">
+              <a href="#" onclick="document.getElementById('id01').style.display='block'">Login</a>
+            </li>
           </ul>
         </div>
       </div>
     </nav>
   </header>
+  <!-- LoginModal -->
+  <div id="id01" class="modal">
+  
+    <form class="login-form modal-content animate" action="/action_page.php">
+       <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+      <div class="imgcontainer">       
+        <a class="navbar-brand" href="#">
+            <h3 class="logo"><strong>METRO</strong>CUBE</h3>
+        </a>
+      </div>
+
+      <div>
+        <label for="uname"><b>Username</b></label>
+        <input type="text" placeholder="Enter Username" name="uname" required>
+
+        <label for="psw"><b>Password</b></label>
+        <input type="password" placeholder="Enter Password" name="psw" required>
+          
+        <button type="submit">Login</button>
+        <label>
+          <input type="checkbox" checked="checked" name="remember"> Remember me
+        </label>
+      </div>
+
+      <div>
+        <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+        <span class="psw">Forgot <a href="#">password?</a></span>
+      </div>
+    </form>
+  </div>
   <!-- MainContent -->
   <div class="page-content">
     <section id="portfolio">
