--- a/public/login.html
+++ b/public/login.html
@@ -22,49 +22,24 @@
   <link rel="shortcut icon" href="favicon.ico" />
 </head>
 <body class="page-header-fixed">
-  <!-- Navbar -->
-  <header class="page-header">
-    <nav class="navbar navbar-fixed-top" role="navigation">
-      <div class="container">
-        <!-- Logo and MenuIcon -->
-        <div class="navbar-header page-scroll">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="toggle-icon">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </span>
-          </button>
-          <a class="navbar-brand" href="#">
-            <h3 class="logo"><strong>METRO</strong>CUBE</h3>
-          </a>
-        </div>
-      </div>
-    </nav>
-  </header>
   <!-- MainContent -->
   <div class="page-content">
     <form class="login-form animate" action="#">
-    <div class="imgcontainer">       
+    <div class="imgcontainer">
      <a class="navbar-brand" href="#">
         <h3 class="logo"><strong>METRO</strong>CUBE</h3>
      </a>
     </div>
-
     <div>
       <label for="uname"><b>Username</b></label>
-      <input type="text" placeholder="Enter Username" name="uname" required>
-
+      <input type="text" placeholder="Enter username" name="uname" required>
       <label for="psw"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw" required>
-        
+      <input type="password" placeholder="Enter password" name="psw" required>
       <button type="submit">Login</button>
       <label>
         <input type="checkbox" checked="checked" name="remember"> Remember me
       </label>
     </div>
-
     <div style="login-footer">
       <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
       <span class="psw">Forgot <a href="#">password?</a></span>
@@ -74,13 +49,5 @@
   <!-- Javascript files -->
   <script src="plugins/jquery/jquery.min.js" type="text/javascript"></script>
   <script src="plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-  <script src="plugins/smooth-scroll/smooth-scroll.js" type="text/javascript"></script>
-  <script src="plugins/owl.carousel/owl.carousel.min.js" type="text/javascript"></script>
-  <script src="plugins/cubeportfolio/cubeportfolio/js/jquery.cubeportfolio.min.js" type="text/javascript"></script>
-  <script src="js/cubeportfolio.js" type="text/javascript"></script>
-  <script src="js/scripts.js" type="text/javascript"></script>
-  <script type="text/javascript">
-    Scripts.init();
-  </script>
 </body>
 </html>
