Add get method to login form

--- a/public/login.html
+++ b/public/login.html
@@ -24,7 +24,7 @@
 <body class="page-header-fixed">
   <!-- MainContent -->
   <div class="page-content">
-    <form class="login-form animate" action="#">
+    <form class="login-form animate" action="app-store.html" method="get">
     <div class="imgcontainer">
      <a class="navbar-brand" href="#">
         <h3 class="logo"><strong>METRO</strong>CUBE</h3>
@@ -35,7 +35,7 @@
       <input type="text" placeholder="Enter username" name="uname" required>
       <label for="psw"><b>Password</b></label>
       <input type="password" placeholder="Enter password" name="psw" required>
-      <button type="submit">Login</button>
+      <button type="submit" onclick="">Login</button>
       <label>
         <input type="checkbox" checked="checked" name="remember"> Remember me
       </label>
