Modify app store footer info

--- a/public/index.html
+++ b/public/index.html
@@ -77,14 +77,11 @@
       <div class="footer-copyright">
         <div class="container">
           <ul class="copyright-socials">
-            <li><a href="https://github.com/jraleman"><i class="fa fa-github"></i></a></li>
-            <li><a href="https://linkedin.com/in/jraleman"><i class="fa fa-linkedin"></i></a></li>
-            <li><a href="https://www.youtube.com/channel/UCZDWw9Pc-nfh5TBIlHA9shw"><i class="fa fa-youtube"></i></a></li>
-            <li><a href="https://instagram.com/jraleman93"><i class="fa fa-instagram"></i></a></li>
-            <li><a href="https://jraleman.com"><i class="fa fa-globe"></i></a></li>
+            <li><a href="https://github.com/jraleman/FordHackathon"><i class="fa fa-github"></i></a></li>
+            <li><a href="https://jraleman.com/FordHackathon"><i class="fa fa-globe"></i></a></li>
           </ul>
-          <p>Another theme by <strong><a href="https://jraleman.com/">jraleman</a></strong>.</p>
-          <p><i>*Based on <a href="https://github.com/technext/Metronic-One-Page-2">Metronic OnePage theme</a></i><p>
+          <p>Just a project for the <strong><a href="https://jraleman.com/">FordHackathon 2018 </a></strong>.</p>
+          <p><i>*React demo webapp</i><p>
         </div>
       </div>
     </section>
